--- a/mainsite1/home.html
+++ b/mainsite1/home.html
@@ -11,10 +11,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@1,500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@1,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Agdasima&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row r1">
+        <div class="row r1 align-items-center">
             <div class="col-lg-2 c1"><img src="image/icons8-clock-24.png" class="rounded-circle"  alt="">Monday-Friday:10:00-18:00</div>
             <div class="col-lg-2"><img src="image/icons8-mail-24.png" class="rounded-circle" alt="..." height="15px" width="15px">mail@company.com</div>
         <div class="col-lg-2 cp"><img src="image/icons8-phone-48.png" class="rounded-circle" alt="..." height="15px" width="15px">0479-2146378</div>
@@ -29,7 +30,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row align-items-center">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand ml" href="#"><img src="image/icons8-party.gif" alt=""></a>
@@ -84,10 +85,77 @@
           
         </div>
      
-        <div class="row">
-          <div class="col-lg ss">
-            <h3 id="cl">Tonight's Dream....Tomorrow's Memory</h3>
+        <div class="row ss">
+          <div class="col-lg-6">
+            <h2 class="cc cl"><b>Tonight's Dream....Tomorrow's Memory</b></h2>
+            <h2 class="cl" style="padding-left: 200px;"><b>Eat, sleep, party, repeat.</b></h2>
+            <p class="cs">Dance parties are gatherings in bars where the guests dance to house music, techno music, or disco.
+              </p>
+              <p class="cs"> The music for dance parties is usually selected and played by a disc jockey.</p><br>
+
+
+              <div class="row row-cols-1 row-cols-md-3 g-4 cf">
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <p id="pp"><img src="image/icons8-phone-24or.png" alt=""></p>
+                      <h5 class="card-title text-center">Phone</h5>
+                      <p class="card-text text-center text-muted">+142 5897555</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <p id="pp"><img src="image/icons8-mail-24or.png" alt=""></p>
+                      <h5 class="card-title text-center">Email</h5>
+                      <p class="card-text text-center text-muted">mail@company.com</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">                    
+                    <div class="card-body">
+                      <p id="pp"><img src="image/icons8-clock-24or.png" alt=""></p>
+                      <h5 class="card-title text-center">Opening Hours</h5>
+                      <p class="card-text text-center text-muted">10.00am to 2.00am</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
           </div>
+
+          <div class="col-lg-5" style="padding-top: 300px; padding-left: 100px;">
+            <div class="card h-100">
+              <form action="">
+                <div class="row justify-content-center" id="pi">
+                  <div class="col-md-6">
+                    <label for="inputfname" class="form-label text-muted" >First Name</label>
+                    <input type="text" class="form-control rounded-pill" id="inputfname">
+                  </div>
+                </div>
+                <div class="row justify-content-center" id="pl" >
+                  <div class="col-md-6">
+                    <label for="inputlname" class="form-label text-muted" >Last Name</label>
+                    <input type="text" class="form-control rounded-pill" id="inputlname">
+                  </div>
+                </div>
+                <div class="row justify-content-center" id="pl">
+                  <div class="col-md-6">
+                    <label for="inputpassword" class="form-label text-muted" >Password</label>
+                    <input type="password" class="form-control rounded-pill" id="inputpassword">
+                  </div>
+                </div>
+                <div class="d-grid gap-2 col-6 mx-auto" id="pl">
+                  <button class="btn rounded-pill" type="button" style="background-color: orangered; color: white;">Get Started</button>
+                </div>
+                <div class="row">
+                  <p> </p>
+                </div>
+              </form>
+            </div>
+          </div>
+
         </div>
 
 
