--- a/work12/wrk12.html
+++ b/work12/wrk12.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="marginbody">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row head">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
                   <a class="navbar-brand ft" href="#"><b>W.</b></a>
@@ -43,13 +44,24 @@
               
         </div>
         <div class="row">
-            <div class="col-lg-sm  ">
+            <div class="col-lg-8 col-sm-12">
                 <picture>
                     <img srcset="image/image-web-3-desktop.jpg" class="hy" alt="">
                 </picture>
+                <div class="row">
+                  <div class="col-lg-6 col-sm-12 ">
+                    <h1>The Bright Futuire web 3.0 </h1>
+                  </div>
+                  <div class="col-lg-6 col-sm-12 btn">
+                    <p>
+                      We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise? 
+                      <button type="button" class="btn btn-danger">Read More</button>
+                    </p>
+                  </div>
+                </div>
             </div>
-            <div class="col-lg">
-                sdfuias
+            <div class="col-lg-4 col-sm-12"  style="background-color: darkblue;">
+
             </div>
         </div>
     </div>
