--- a/work12/wrk12.html
+++ b/work12/wrk12.html
@@ -44,26 +44,87 @@
               
         </div>
         <div class="row">
-            <div class="col-lg-8 col-sm-12">
-                <picture>
-                    <img srcset="image/image-web-3-desktop.jpg" class="hy" alt="">
-                </picture>
-                <div class="row">
-                  <div class="col-lg-6 col-sm-12 ">
-                    <h1>The Bright Futuire web 3.0 </h1>
-                  </div>
-                  <div class="col-lg-6 col-sm-12 btn">
-                    <p>
-                      We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise? 
-                      <button type="button" class="btn btn-danger">Read More</button>
-                    </p>
-                  </div>
-                </div>
+          <div class="col-lg-9 col-sm-12">
+            <img src="image/image-web-3-desktop.jpg" class="hy"  alt="">
+            <div class="row">
+              <div class="col-lg-6 col-sm-12">
+                <h1>The Bright Futuire web 3.0 </h1>
+              </div>
+              <div class="col-lg-6 col-sm-12">
+                <p>
+                  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise? <br></p>
+                  <button type="button" class="btn btn-lg  ck">Read More</button>
+              </div>
             </div>
-            <div class="col-lg-4 col-sm-12"  style="background-color: darkblue;">
-
+          </div>
+            <div class="col-lg-3 col-sm-12"  style="background-color: rgb(5, 5, 65);">
+              <h2 style="color: rgb(236, 167, 62);">New</h2>
+              <article id="st">
+                <h3 class="ho">Hydrogen VS Electric Cars</h3>
+                <p class="text-muted">Will hydrogen fueled cars ever catch up to EVs ?</p>
+              </article>
+              <article id="st">
+                <h3 class="ho">Hydrogen VS Electric Cars</h3>
+                <p class="text-muted">Will hydrogen fueled cars ever catch up to EVs ?</p>
+              </article>
+              <article id="st">
+                <h3 class="ho">Hydrogen VS Electric Cars</h3>
+                <p class="text-muted">Will hydrogen fueled cars ever catch up to EVs ?</p>
+              </article>
             </div>
         </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="image/image-retro-pcs.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="image/image-top-laptops.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="image/image-gaming-growth.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
