--- a/work13/work13.html
+++ b/work13/work13.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="containter-fluid">
-        <div class="row bg ">
-            <nav class="navbar navbar-expand-lg navbar-light pad" >
+        <div class="row bg">
+          <!-- <img src="image/_.jpeg"class="fl" alt=""> -->
+            <nav class="navbar navbar-expand-lg navbar-light pad"  >
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"id="col">SunnySide</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,9 @@
                     </ul>
                   </div>
                 </div>
+
               </nav>
+              <h1 class="tx text-center mar2">WE ARE CREATIVE</h1>
 
         </div>
     </div>
