--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -44,6 +44,17 @@
       </div>
    </div>
    <!-- header close -->
+   <!-- banner -->
+      <div class="row txt1">
+        <h6 ><b>HERE YOU CAN FIND DELECIOUS FOODS</b></h6><br>
+        <h1><b>ASIAN RESTAURANT</b></h1>
+        <p class="text-break">Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis<br>a nisl non, tempor interdum nisl</p>
+        <div class="primary-button">
+          <a href="#" class="scroll-link" data-id="book-table" type="button">Order Right Now</a>
+        </div>
+      </div>
+  <!-- banner close -->
+  
 
 
    
