--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -54,6 +54,37 @@
         </div>
       </div>
   <!-- banner close -->
+
+  <div class="row font">
+    <div class="col-md-3">
+       <img src="images/cook_01.jpg" height="219px" width="292px" alt="">
+      </div>
+       <div class="col-md-4 bg1">
+        <h4 class="mrg1">WE COOK DELECIOUS</h4>
+        <div class="row bg2">
+          <div class="col-lg">
+            <p>YOU CAN CALL US ON:</p>
+            <p>+ 1234 567 8910</p>
+         </div>
+        </div>
+        <div class="row">
+          <div class="col-lg">
+            <span class="bor1">or</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg">
+            <button type="button" class="btn btn-outline-light btn1">order now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <img src="images/cook_02.jpg" height="220px" width="293px" alt="">
+      </div>
+       </div>
+
+   
+  </div>
   
 
 
