--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -56,15 +56,15 @@
   <!-- banner close -->
 
   <div class="row font">
-    <div class="col-md-3">
+    <div class="col-lg cls1">
        <img src="images/cook_01.jpg" height="219px" width="292px" alt="">
       </div>
-       <div class="col-md-4 bg1">
-        <h4 class="mrg1">WE COOK DELECIOUS</h4>
+       <div class="col-lg-3 bg1">
+        <h3 class="mrg1">WE COOK DELECIOUS</h3>
         <div class="row bg2">
-          <div class="col-lg">
+          <div class="col-lg cls3">
             <p>YOU CAN CALL US ON:</p>
-            <p>+ 1234 567 8910</p>
+            <p class="cls4"><b>+ 1234 567 8910</b></p>
          </div>
         </div>
         <div class="row">
@@ -78,13 +78,35 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-lg cls2">
         <img src="images/cook_02.jpg" height="220px" width="293px" alt="">
       </div>
        </div>
 
+        <!-- order page close -->
+
+        <div class="row  cls5 ">
+          <div class="col-lg-2">
+            <a href=""><img src="images/cook_breakfast.png" alt="">
+            <h4>Breakfast</h4></a>
+          </div>
+          <div class="col-lg-2">
+            <a href=""><img src="images/cook_breakfast.png" alt="">
+            <h4>Breakfast</h4></a>
+          </div>
+          <div class="col-lg-2">
+            <a href=""><img src="images/cook_breakfast.png" alt="">
+            <h4>Breakfast</h4></a>
+          </div>
+          <div class="col-lg-2">
+            <a href=""><img src="images/cook_breakfast.png" alt="">
+            <h4>Breakfast</h4></a>
+          </div>
+        </div>
+
+
    
-  </div>
+  
   
 
 
