--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -50,11 +50,11 @@
         <h1><b>ASIAN RESTAURANT</b></h1>
         <p class="text-break">Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis<br>a nisl non, tempor interdum nisl</p>
         <div class="primary-button">
-          <a href="#" class="scroll-link" data-id="book-table" type="button">Order Right Now</a>
+          <a href="#booktable" class="scroll-link" data-id="book-table" type="button">Order Right Now</a>
         </div>
       </div>
   <!-- banner close -->
-
+  <!-- order page open -->
   <div class="row font">
     <div class="col-lg cls1">
        <img src="images/cook_01.jpg" height="219px" width="292px" alt="">
@@ -84,27 +84,111 @@
        </div>
 
         <!-- order page close -->
-
+        <!-- roundimg -->
         <div class="row  cls5 ">
           <div class="col-lg-2">
             <a href=""><img src="images/cook_breakfast.png" alt="">
-            <h4>Breakfast</h4></a>
+            <p>Breakfast</p></a>
           </div>
           <div class="col-lg-2">
-            <a href=""><img src="images/cook_breakfast.png" alt="">
-            <h4>Breakfast</h4></a>
+            <a href=""><img src="images/cook_lunch.png" alt="">
+            <p>Lunch</p></a>
           </div>
           <div class="col-lg-2">
-            <a href=""><img src="images/cook_breakfast.png" alt="">
-            <h4>Breakfast</h4></a>
+            <a href=""><img src="images/cook_dinner.png" alt="">
+            <p>Dinner</p></a>
           </div>
           <div class="col-lg-2">
-            <a href=""><img src="images/cook_breakfast.png" alt="">
-            <h4>Breakfast</h4></a>
+            <a href=""><img src="images/cook_dessert.png" alt="">
+            <p>Dessert</p></a>
           </div>
         </div>
+        <!-- roundimg close -->
+        <!-- reservation start -->
+        <section id="book-table">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-md-12">
+                <div class="heading">
+                <h2>Book your table now</h2>
+                </div>
+              </div>
+              <div class="col-md-4 col-md-offset-2 col-sm-12">
+                <div class="left-image">
+                    <img src="images/book_left_image.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+              <div class="right-info">
+                <h4>Reservation</h4>
+                <form action="" id="form-submit" method="get">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <fieldset>
+                        <select required name="day" onchange='this.form()'>
+                        <option value="">Select day</option>
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday">Friday</option>
+                        <option value="Saturday">Saturday</option>
+                        <option value="Sunday">Sunday</option>
+                      </select>
+                      </fieldset>
+                    </div>
+                      <div class="col-md-6">
+                        <fieldset>
+                          <select name="hour" onchange='this.form()'>
+                            <option value="">Select day</option>
+                            <option value="10-010">10:00</option>
+                            <option value="12-00">12:00</option>
+                            <option value="14-00">14:00</option>
+                            <option value="16-00">16:00</option>
+                            <option value="18-00">18:00</option>
+                            <option value="20-00">20:00</option>
+                            <option value="22-00">22:00</option>
+                          </select>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6">
+                        <fieldset>
+                          <input type="text" name="name" class="form-control" id="name" placeholder="Full name" required>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6">
+                        <fieldset>
+                          <input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone Number" required>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6">
+                        <fieldset>
+                          <select name="hour" onchange='this.form()'>
+                            <option value="">How Many person</option>
+                            <option value="1-person">1 person</option>
+                            <option value="2-person">2 person</option>
+                            <option value="3-person">3 person</option>
+                            <option value="4-person">4 person</option>
+                            <option value="5-person">5 person</option>
+                            <option value="6-person">6 person</option>
+                          </select>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6">
+                        <fieldset>
+                          <button type="submit" id="form-submit" class="btn" value="">Book Now</button>
+                        </fieldset>
+                      </div>
+                  </div>
+                </form>
+              </div>
+              </div>
+            </div>
 
+          </div>
 
+        </section>
+        <!-- reservation close -->
    
   
   
