--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -50,14 +50,14 @@
         <h1><b>ASIAN RESTAURANT</b></h1>
         <p class="text-break">Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis<br>a nisl non, tempor interdum nisl</p>
         <div class="primary-button">
-          <a href="#booktable" class="scroll-link" data-id="book-table" type="button">Order Right Now</a>
+          <a href="#book-table" class="scroll-link" data-id="book-table" type="button">Order Right Now</a>
         </div>
       </div>
   <!-- banner close -->
   <!-- order page open -->
-  <div class="row font">
-    <div class="col-lg cls1">
-       <img src="images/cook_01.jpg" height="219px" width="292px" alt="">
+  <div class="row font justify-content-center align-items-end">
+    <div class="col-lg-4 col-sm-12 cls1">
+       <img class="float-end" src="images/cook_01.jpg" height="219px" width="292px" alt="">
       </div>
        <div class="col-lg-3 bg1">
         <h3 class="mrg1">WE COOK DELECIOUS</h3>
@@ -74,31 +74,31 @@
         </div>
         <div class="row">
           <div class="col-lg">
-            <button type="button" class="btn btn-outline-light btn1">order now</button>
+            <a href="#book-table" class="btn btn-outline-light btn1">order now</a>
           </div>
         </div>
       </div>
-      <div class="col-lg cls2">
-        <img src="images/cook_02.jpg" height="220px" width="293px" alt="">
+      <div class="col-lg-4 col-sm-12  cls2">
+        <img class="float-start" src="images/cook_02.jpg" height="220px" width="293px" alt="">
       </div>
        </div>
 
         <!-- order page close -->
         <!-- roundimg -->
-        <div class="row  cls5 ">
-          <div class="col-lg-2">
+        <div class="row justify-content-center cls5 ">
+          <div class="col-lg-2 col-sm-12 text-center">
             <a href=""><img src="images/cook_breakfast.png" alt="">
             <p>Breakfast</p></a>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-sm-12 text-center">
             <a href=""><img src="images/cook_lunch.png" alt="">
             <p>Lunch</p></a>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-sm-12 text-center">
             <a href=""><img src="images/cook_dinner.png" alt="">
             <p>Dinner</p></a>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-sm-12 text-center">
             <a href=""><img src="images/cook_dessert.png" alt="">
             <p>Dessert</p></a>
           </div>
@@ -176,7 +176,7 @@
                       </div>
                       <div class="col-md-6">
                         <fieldset>
-                          <button type="submit" id="form-submit" class="btn" value="">Book Now</button>
+                          <button type="submit" id="form-submit" class="btn" value="">Book Table</button>
                         </fieldset>
                       </div>
                   </div>
@@ -189,6 +189,16 @@
 
         </section>
         <!-- reservation close -->
+
+        <!-- downloading page start -->
+
+        <div class="row ">
+          <div class="col-lg download">
+          <p><b>GET APPLICATION FOR YOUR PHONE</b></p>
+             <a href="index.html" class="btn btn-outline-light btn2">DOWNLOAD NOW</a>
+            </div>
+          </div>
+
    
   
   
