--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -334,8 +334,8 @@
                       </div>
                   </div>
               </div>
-              <form id="contact" action="" method="get">
-                  <div class="row">
+              <form  id="contact" action="" method="get">
+                  <div class="row justify-content-center">
                       <div class="col-md-4 col-md-offset-3">
                           <fieldset>
                               <input name="email" type="text" class="form-control" id="email" placeholder="Enter your email here..." required="">
@@ -351,6 +351,29 @@
           </div>
           </section>
           <!-- signin end -->
+          <!-- footer start -->
+          <footer class="foot">
+            <div class="container">
+              <div class="row rre justify-content-center">
+                <div class="col-md-4">
+                  <p>Copyright &copy; 2020 Akshay's Template</p>
+                </div>
+                <div class="col-md-4">
+                  <ul>
+                    <li class="rounded-circle" ><a href="https://www.facebook.com"><i><img src="images/icons8-facebook-48.png" height="15px" width="15px" alt=""></i></a></li>
+                    <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-twitter-48.png" height="15px" width="15px" alt=""></i></a></li>
+                    <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-linkedin-2-48.png" height="15px" width="15px" alt=""></i></a></li>
+                    <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-rss-48.png" height="15px" width="15px" alt=""></i></a></li>
+                    <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-dribbble-48.png" height="15px" width="15px" alt=""></i></a></li>
+                </div>
+                <div class="col-md-4">
+                  <p>Design: Akshay T Sreenivasan</p>
+                </div>
+              </div>
+            </div>
+          </footer>
+          <!-- footer end -->
+          
    
   
   
