--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -12,7 +12,6 @@
    <div class="header">
       <div class="containter">
             <a class="navbar-brand scroll-top" href="index.html">VICTORY</a>
-
             <nav class="navbar navbar-expand-lg navbar-inverse">
                <div class="navbar-header">
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +27,13 @@
                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="#">Our Menus</a>
+                       <a class="nav-link" href="Menu.html">Our Menus</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="#">Blog Entries</a>
+                       <a class="nav-link" href="Blog.html">Blog Entries</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="Contact.html">Contact Us</a>
                       </li>
 
                   </ul>
