--- a/multipagesite/Menu.html
+++ b/multipagesite/Menu.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- header -->
-  <div class="header">
+  <div class="header-pages">
     <div class="containter">
           <a class="navbar-brand scroll-top" href="index.html">VICTORY</a>
           <nav class="navbar navbar-expand-lg navbar-inverse">
@@ -48,7 +48,7 @@
  </div>
  <!-- header close -->
  <!-- banner -->
-    <div class="row txt1">
+    <div class="row banner">
       <h1><b>Our menu</b></h1>
       <p class="text-break">Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis<br>a nisl non, tempor interdum nisl</p>
     </div>
@@ -310,7 +310,7 @@
     <div class="container">
       <div class="row rre justify-content-center">
         <div class="col-md-4">
-          <p>Copyright &copy; 2020 Akshay's Template</p>
+          <p>Copyright &copy; 2020 Tasc Template</p>
         </div>
         <div class="col-md-4">
           <ul>
@@ -321,7 +321,7 @@
             <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-dribbble-48.png" height="15px" width="15px" alt=""></i></a></li>
         </div>
         <div class="col-md-4">
-          <p>Design: Akshay T Sreenivasan</p>
+          <p>Design: TASC Boys</p>
         </div>
       </div>
     </div>
