--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -355,7 +355,7 @@
             <div class="container">
               <div class="row rre justify-content-center">
                 <div class="col-md-4">
-                  <p>Copyright &copy; 2020 Akshay's Template</p>
+                  <p>Copyright &copy; 2020 Tasc Template</p>
                 </div>
                 <div class="col-md-4">
                   <ul>
@@ -366,7 +366,7 @@
                     <li class="rounded-circle" ><a href="#"><i><img src="images/icons8-dribbble-48.png" height="15px" width="15px" alt=""></i></a></li>
                 </div>
                 <div class="col-md-4">
-                  <p>Design: Akshay T Sreenivasan</p>
+                  <p>Design:  TASC Boys</p>
                 </div>
               </div>
             </div>
