--- a/multipagesite/index.html
+++ b/multipagesite/index.html
@@ -14,8 +14,8 @@
             <a class="navbar-brand scroll-top" href="index.html">VICTORY</a>
             <nav class="navbar navbar-expand-lg navbar-inverse">
                <div class="navbar-header">
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
+                 <button class="navbar-toggler text-center" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"><img class="toggle" src="images/icons8-menu-48.png" alt=""></span>
                    <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -56,7 +56,7 @@
   <!-- order page open -->
   <div class="row font justify-content-center align-items-end">
     <div class="col-lg-4 col-sm-12 cls1">
-       <img class="float-end" src="images/cook_01.jpg" height="219px" width="292px" alt="">
+       <img src="images/cook_01.jpg" height="219px" width="292px" alt="">
       </div>
        <div class="col-lg-3 bg1">
         <h3 class="mrg1">WE COOK DELECIOUS</h3>
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="col-lg-4 col-sm-12  cls2">
-        <img class="float-start" src="images/cook_02.jpg" height="220px" width="293px" alt="">
+        <img src="images/cook_02.jpg" height="220px" width="293px" alt="">
       </div>
        </div>
 
@@ -114,7 +114,7 @@
               </div>
               <div class="col-md-4 col-md-offset-2 col-sm-12">
                 <div class="left-image">
-                    <img src="images/book_left_image.jpg" alt="">
+                    <img src="images/book_left_image.jpg" class="img-fluid" alt="">
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
