--- a/potofolic/home.html
+++ b/potofolic/home.html
@@ -12,9 +12,13 @@
 <body>
     <header id="header">
         <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
             <h1><a href="home.html">Akshay T Sreenivasan</a></h1>
             <h2>I,m a <span>Fresher</span></h2>
             <nav id="navbar" class="navbar">
+            
                 <ul>
                     <li><a class="nav-link" href="home.html">Home</a></li>
                     <li><a class="nav-link" href="pages/about.html">About</a></li>
@@ -32,8 +36,7 @@
                 <a href="#" class="instagram"><img src="images/icons8-instagram-24.png" alt=""></a>
                 <a href="#" class="linkedin"><img src="images/icons8-linkedin-24.png" alt=""></a>
               </div>
-        </div>
-
+        </div> 
     </header>
     
 
